Update ComponentDescription.java